# Chat-Application

backend/: .gitignore  pyproject.toml  run.py
backend/core/: api.py  asgi.py  settings.py  urls.py
backend/core/main/: apps.py  models.py  schemas.py
backend/core/management/commands/: create_module_app.py  delete_module_app.py
backend/core/utils/: changes.py  choices.py  model_utils.py  omitted_fields.py
backend/core/utils/regex/: regex_character.py
backend/modules/rooms/: apps.py  consumer.py  controllers.py  models.py  router.py  schemas.py
backend/modules/rooms/migrations/: 0001_initial.py  0002_initial.py  0003_alter_chatmessage_last_user_alter_chatroom_last_user.py
backend/modules/tokens/: controllers.py  schemas.py
backend/modules/users/: controllers.py  models.py  repository.py  schemas.py  services.py
backend/modules/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/chat/[user_id]/: page.tsx
frontend/src/components/: chat-messages.tsx  chat-page.tsx  chat-select.tsx  login-page.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: ChatBubble.tsx  TypingIndicator.tsx  chat-socket.tsx
frontend/src/lib/: auth-api.ts  auth.ts  jwt.ts  socket.ts  useAuth.ts
frontend/src/pages/api/chats/messages/[room_name]/: page.tsx
frontend/src/server/: socket-server.ts
frontend/src/services/: api.ts
